# routes/user.js
@@ -69,9 +69,9 @@ router.post('/myrecipes', async (req,res,next) => {
       image: req.body.image,
       readyInMinutes: req.body.readyInMinutes,
       popularity: req.body.popularity,
-      vegan: req.body.vegan,
-      vegetarian: req.body.vegetarian,
-      glutenFree: req.body.glutenFree,
+      vegan: Number(req.body.vegan),
+      vegetarian: Number(req.body.vegetarian),
+      glutenFree: Number(req.body.glutenFree),
       ingredients: JSON.stringify(req.body.ingredients),
       instructions: JSON.stringify(req.body.instructions),
       servings: req.body.servings,
@@ -114,9 +114,9 @@ router.get('/myrecipes', async (req,res,next) => {
       image: req.body.image,
       readyInMinutes: req.body.readyInMinutes,
       popularity: req.body.popularity,
-      vegan: req.body.vegan,
-      vegetarian: req.body.vegetarian,
-      glutenFree: req.body.glutenFree,
+      vegan: Number(req.body.vegan),
+      vegetarian: Number(req.body.vegetarian),
+      glutenFree: Number(req.body.glutenFree),
       ingredients: JSON.stringify(req.body.ingredients),
       instructions: JSON.stringify(req.body.instructions),
       servings: req.body.servings,
